--- a/public/users-manage.html
+++ b/public/users-manage.html
@@ -195,7 +195,7 @@
                 <th>البريد</th>
                 <th>الدور</th>
                 <th>الحالة</th>
-                <th>آخر تحديث</th>
+                <th>الإنشاء</th>
                 <th>إجراءات</th>
               </tr>
             </thead>
