--- a/public/users-manage.html
+++ b/public/users-manage.html
@@ -78,49 +78,61 @@
     </div>
 
     <!-- إضافة مستخدم -->
-    <div class="card mb-4">
-      <div class="card-body">
-        <h5 class="card-title mb-3"><i class="bi bi-person-plus"></i> إضافة مستخدم جديد</h5>
-        <form id="addUserForm" class="row g-3">
-          <div class="col-md-3">
-            <label class="form-label">اسم المستخدم</label>
-            <input type="text" class="form-control" name="username" autocomplete="username" required>
-            <div class="form-text" id="userCheckHint"></div>
-          </div>
-          <div class="col-md-3">
-            <label class="form-label">الاسم الكامل</label>
-            <input type="text" class="form-control" name="name" required>
-          </div>
-          <div class="col-md-3">
-            <label class="form-label">البريد الإلكتروني</label>
-            <input type="email" class="form-control" name="email" autocomplete="email" required>
-            <div class="form-text" id="emailCheckHint"></div>
-          </div>
-          <div class="col-md-3">
-            <label class="form-label">كلمة المرور</label>
-            <div class="input-group">
-              <input type="password" class="form-control" name="password" id="pwInput" minlength="8" required>
-              <button type="button" class="btn btn-outline-secondary" id="togglePwBtn" title="إظهار/إخفاء">
-                <i class="bi bi-eye"></i>
-              </button>
-            </div>
-            <div class="pw-meter mt-2"><div id="pwBar"></div></div>
-          </div>
-          <div class="col-md-3">
-            <label class="form-label">الدور</label>
-            <select class="form-select" name="role" required>
-              <option value="user">user</option>
-              <option value="admin">admin</option>
-            </select>
-          </div>
-          <div class="col-12">
-            <button class="btn btn-primary" id="addBtn">
-              <span class="btn-label"><i class="bi bi-check2-circle"></i> إضافة</span>
+    <!-- إضافة مستخدم (قابلة للطي) -->
+<div class="card mb-4">
+  <div class="card-header p-0">
+    <button type="button" class="btn btn-link w-100 text-start p-3 d-flex justify-content-between align-items-center"
+        data-bs-toggle="collapse" data-bs-target="#addUserCollapse"
+        aria-expanded="false" aria-controls="addUserCollapse">
+  <span class="fw-semibold"><i class="bi bi-person-plus"></i> إضافة مستخدم جديد</span>
+  <i class="bi bi-plus-lg" id="addFormToggleIcon"></i>
+</button>
+  </div>
+
+  <div id="addUserCollapse" class="collapse">
+    <div class="card-body">
+      <form id="addUserForm" class="row g-3">
+        <div class="col-md-3">
+          <label class="form-label">اسم المستخدم</label>
+          <input type="text" class="form-control" name="username" autocomplete="username" required>
+          <div class="form-text" id="userCheckHint"></div>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label">الاسم الكامل</label>
+          <input type="text" class="form-control" name="name" required>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label">البريد الإلكتروني</label>
+          <input type="email" class="form-control" name="email" autocomplete="email" required>
+          <div class="form-text" id="emailCheckHint"></div>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label">كلمة المرور</label>
+          <div class="input-group">
+            <input type="password" class="form-control" name="password" id="pwInput" minlength="8" required>
+            <button type="button" class="btn btn-outline-secondary" id="togglePwBtn" title="إظهار/إخفاء">
+              <i class="bi bi-eye"></i>
             </button>
           </div>
-        </form>
-      </div>
+          <div class="pw-meter mt-2"><div id="pwBar"></div></div>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label">الدور</label>
+          <select class="form-select" name="role" required>
+            <option value="user">user</option>
+            <option value="admin">admin</option>
+          </select>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-primary" id="addBtn">
+            <span class="btn-label"><i class="bi bi-check2-circle"></i> إضافة</span>
+          </button>
+        </div>
+      </form>
     </div>
+  </div>
+</div>
+
 
     <!-- أدوات الجدول -->
     <div class="card mb-3">
@@ -286,6 +298,17 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  const collapseEl = document.getElementById('addUserCollapse');
+  const iconEl = document.getElementById('addFormToggleIcon');
+  collapseEl.addEventListener('show.bs.collapse', () => iconEl.className = 'bi bi-dash-lg');
+  collapseEl.addEventListener('hide.bs.collapse', () => iconEl.className = 'bi bi-plus-lg');
+});
+</script>
+
+  
   <script>
     /* ====== API BASE & fetch مغلّف ====== */
     const RENDER_BASE = 'https://vdash-qkyv.onrender.com'; // دومين خدمتك على Render
