--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -10,6 +10,18 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@latest/font/bootstrap-icons.css">
 
   <style>
+/* مساواة ارتفاع شارة معلومات المستخدم بزر "خروج" */
+.user-chip{
+  display: inline-flex;
+  align-items: center;
+  gap: .25rem;
+  font-size: 1rem;         /* نفس حجم خط الأزرار */
+  padding: .375rem .75rem; /* نفس حشوة الأزرار */
+  line-height: 1.5;        /* نفس خط الأساس للأزرار */
+  border-radius: .375rem;  /* نفس نصف القطر للأزرار */
+}
+
+    
     body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
     .container{max-width:1100px;margin-top:40px}
     .card-link{display:block;text-decoration:none;color:inherit;border-radius:16px;box-shadow:0 6px 18px rgba(0,0,0,.08);transition:.2s}
