--- a/public/audit-logs.html
+++ b/public/audit-logs.html
@@ -16,6 +16,17 @@
       --after-w: 35%;
     }
 
+    /* مساواة ارتفاع شارة معلومات المستخدم بزر "خروج" */
+.user-chip{
+  display: inline-flex;
+  align-items: center;
+  gap: .25rem;
+  font-size: 1rem;         /* نفس حجم خط الأزرار */
+  padding: .375rem .75rem; /* نفس حشوة الأزرار */
+  line-height: 1.5;        /* نفس خط الأساس للأزرار */
+  border-radius: .375rem;  /* نفس نصف القطر للأزرار */
+}
+
     body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
     .container{max-width:1200px;margin-top:40px}
     .card{border-radius:16px;box-shadow:0 6px 18px rgba(0,0,0,.06)}
