--- a/public/committees-login.html
+++ b/public/committees-login.html
@@ -3,73 +3,118 @@
 <head>
   <meta charset="UTF-8">
   <title>تسجيل الدخول - نظام اللجان</title>
+  <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=vhaprvzh&dl=1"
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap (RTL) + Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
   <style>
-    body { background: linear-gradient(135deg, #f3f4f6, #e5e7eb); font-family: 'Segoe UI', Tahoma, sans-serif; min-height: 100vh; display: flex; align-items: center; }
-    .login-card { max-width: 420px; width: 100%; margin: auto; background: #fff; border-radius: 16px; box-shadow: 0 15px 30px rgba(0,0,0,.08); overflow: hidden; }
-    .login-header { background: #0d6efd; color: #fff; padding: 18px; text-align: center; }
-    .login-body { padding: 20px 22px 24px; }
-    .brand { font-size: 18px; font-weight: 700; display: flex; align-items: center; gap: 8px; justify-content: center; }
+    body {
+      background: linear-gradient(135deg, #f3f4f6, #e5e7eb);
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+    }
+    .login-card {
+      max-width: 420px; width: 100%; margin: auto;
+      background: #fff; border-radius: 16px;
+      box-shadow: 0 15px 30px rgba(0,0,0,.08);
+      overflow: hidden;
+    }
+    .login-header {
+      background: #0d6efd; color: #fff; padding: 18px; text-align: center;
+    }
+    .brand {
+      font-size: 18px; font-weight: 700; display: flex; align-items: center; gap: 8px; justify-content: center;
+    }
     .brand i { font-style: normal; font-weight: 400; opacity: .9; }
+    .login-body { padding: 20px 22px 24px; }
     .form-control:focus { box-shadow: 0 0 0 .2rem rgba(13,110,253,.15); }
     .btn-primary { border-radius: 10px; }
-    .small-link { font-size: 13px; color: #6b7280; }
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 2000; }
     .spinner-border-sm { --bs-spinner-width: 1rem; --bs-spinner-height: 1rem; }
+    .password-toggle-btn { min-width: 2.75rem; }
   </style>
 </head>
 <body>
-  <div class="login-card">
+  <div class="login-card" aria-live="polite">
     <div class="login-header">
       <div class="brand">🔐 نظام اللجان <i>| تسجيل الدخول</i></div>
     </div>
+
     <div class="login-body">
       <form id="loginForm" novalidate>
         <div class="mb-3">
-          <label class="form-label">اسم المستخدم</label>
-          <input type="text" id="username" class="form-control" placeholder="مثال: b01578" autocomplete="username" required>
+          <label class="form-label" for="username">اسم المستخدم</label>
+          <input
+            type="text"
+            id="username"
+            class="form-control"
+            placeholder="مثال: b01578"
+            autocomplete="username"
+            autocapitalize="none"
+            spellcheck="false"
+            inputmode="text"
+            required
+          >
           <div class="invalid-feedback">يرجى إدخال اسم المستخدم.</div>
         </div>
+
         <div class="mb-2">
-          <label class="form-label d-flex justify-content-between align-items-center">
-            <span>كلمة المرور</span>
-            <a href="#" class="small-link" tabindex="-1" onclick="event.preventDefault(); togglePassword();">إظهار/إخفاء</a>
-          </label>
+          <label class="form-label" for="password">كلمة المرور</label>
           <div class="input-group">
-            <input type="password" id="password" class="form-control" placeholder="••••••••" autocomplete="current-password" required>
-            <button class="btn btn-outline-secondary" type="button" onclick="togglePassword()" aria-label="إظهار/إخفاء">
-              👁️
+            <input
+              type="password"
+              id="password"
+              class="form-control"
+              placeholder="••••••••"
+              autocomplete="current-password"
+              required
+            >
+            <button
+              id="togglePwBtn"
+              class="btn btn-outline-secondary password-toggle-btn"
+              type="button"
+              aria-label="إظهار كلمة المرور"
+              title="إظهار/إخفاء كلمة المرور"
+            >
+              <i class="bi bi-eye" aria-hidden="true"></i>
             </button>
             <div class="invalid-feedback">يرجى إدخال كلمة المرور.</div>
           </div>
         </div>
+
         <div class="d-grid mt-3">
-          <button type="submit" id="submitBtn" class="btn btn-primary">
+          <button type="submit" id="submitBtn" class="btn btn-primary" aria-busy="false">
             <span class="btn-text">دخول</span>
-            <span class="btn-wait d-none"><span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> جاري التحقق...</span>
+            <span class="btn-wait d-none">
+              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              جاري التحقق...
+            </span>
           </button>
         </div>
       </form>
-      <div class="text-center mt-3 small-link">هذه الصفحة مخصّصة لنظام اللجان فقط</div>
     </div>
   </div>
 
   <!-- Toasts -->
   <div class="toast-container">
-    <div id="toastSuccess" class="toast text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+    <div id="toastSuccess" class="toast text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="3500" data-bs-autohide="true">
       <div class="d-flex">
         <div class="toast-body">✅ تم تسجيل الدخول بنجاح</div>
         <button type="button" class="btn-close btn-close-white m-2 me-3" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
     </div>
-    <div id="toastError" class="toast text-bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true">
+    <div id="toastError" class="toast text-bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000" data-bs-autohide="true">
       <div class="d-flex">
         <div class="toast-body">❌ حدث خطأ</div>
         <button type="button" class="btn-close btn-close-white m-2 me-3" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
     </div>
-    <div id="toastInfo" class="toast text-bg-primary border-0" role="alert" aria-live="polite" aria-atomic="true">
+    <div id="toastInfo" class="toast text-bg-primary border-0" role="status" aria-live="polite" aria-atomic="true" data-bs-delay="2500" data-bs-autohide="true">
       <div class="d-flex">
         <div class="toast-body">ℹ️</div>
         <button type="button" class="btn-close btn-close-white m-2 me-3" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -77,6 +122,7 @@
     </div>
   </div>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     /* === إعداد أساس الواجهة الخلفية حسب البيئة === */
@@ -87,7 +133,7 @@
     const API_BASE = isGithub ? RENDER_BASE : (isLocal ? 'http://localhost:3000' : '');
     const go = (path) => isGithub ? (RENDER_BASE + path) : path;
 
-    // (جديد) أدوات التوست
+    /* === Toast helpers === */
     const TSuccess = new bootstrap.Toast(document.getElementById('toastSuccess'));
     const TError   = new bootstrap.Toast(document.getElementById('toastError'));
     const TInfo    = new bootstrap.Toast(document.getElementById('toastInfo'));
@@ -96,13 +142,21 @@
     function showError(msg){ setToast(TError, msg); TError.show(); }
     function showInfo(msg){ setToast(TInfo, msg); TInfo.show(); }
 
-    // إظهار/إخفاء كلمة المرور
-    function togglePassword() {
-      const p = document.getElementById('password');
-      p.type = (p.type === 'password') ? 'text' : 'password';
-    }
+    /* === Password toggle (ثابتة وتعمل مع الأيقونة) === */
+    const pwInput = document.getElementById('password');
+    const togglePwBtn = document.getElementById('togglePwBtn');
+    togglePwBtn.addEventListener('click', () => {
+      const isPw = pwInput.type === 'password';
+      pwInput.type = isPw ? 'text' : 'password';
+      // تبديل الأيقونة ونص الوصولية
+      const icon = togglePwBtn.querySelector('i');
+      icon.className = isPw ? 'bi bi-eye-slash' : 'bi bi-eye';
+      togglePwBtn.setAttribute('aria-label', isPw ? 'إخفاء كلمة المرور' : 'إظهار كلمة المرور');
+      // إبقاء التركيز داخل الحقل لتجربة أفضل
+      pwInput.focus({ preventScroll: true });
+    });
 
-    // قراءة next لعملية إعادة التوجيه بعد النجاح
+    /* === حساب صفحة التحويل بعد النجاح === */
     function getNextUrl() {
       const params = new URLSearchParams(window.location.search);
       const next = params.get('next');
@@ -110,57 +164,107 @@
       return go(safe);
     }
 
-    // تبديل حالة زر الإرسال
+    /* === زر التحميل/الانشغال === */
     function setSubmitting(isLoading) {
       const btn = document.getElementById('submitBtn');
       btn.disabled = isLoading;
+      btn.setAttribute('aria-busy', String(!!isLoading));
       btn.querySelector('.btn-text').classList.toggle('d-none', isLoading);
       btn.querySelector('.btn-wait').classList.toggle('d-none', !isLoading);
     }
+    function markInvalid(el, on = true) {
+      el.classList.toggle('is-invalid', !!on);
+    }
 
-    // إرسال النموذج
+    /* === مهلة للشبكة === */
+    function fetchWithTimeout(resource, options = {}) {
+      const { timeout = 10000 } = options;
+      const controller = new AbortController();
+      const id = setTimeout(() => controller.abort(), timeout);
+      return fetch(resource, { ...options, signal: controller.signal })
+        .finally(() => clearTimeout(id));
+    }
+
+    /* === إن كان المستخدم مسجّلاً بالفعل، يعاد توجيهه فورًا === */
+    (async function redirectIfAuthenticated(){
+      try {
+        const r = await fetch(`${API_BASE}/auth/committees/me`, { credentials: 'include' });
+        const j = await r.json().catch(()=> ({}));
+        if (j?.authenticated) {
+          showInfo('✅ أنت مسجّل دخولًا، جارٍ تحويلك…');
+          setTimeout(() => { window.location.href = getNextUrl(); }, 400);
+        }
+      } catch { /* تجاهل */ }
+    })();
+
+    /* === إرسال النموذج (بدون مستمع Enter إضافي لمنع الإرسال المزدوج) === */
     document.getElementById('loginForm').addEventListener('submit', async (e) => {
       e.preventDefault();
-      const u = document.getElementById('username');
-      const p = document.getElementById('password');
 
-      // فحص بسيط
+      const btn = document.getElementById('submitBtn');
+      const u   = document.getElementById('username');
+      const p   = document.getElementById('password');
+
+      if (btn.disabled) return; // منع النقرات المتكررة
+
+      // تحقق أولي
       let valid = true;
-      if (!u.value.trim()) { u.classList.add('is-invalid'); valid = false; } else { u.classList.remove('is-invalid'); }
-      if (!p.value.trim()) { p.classList.add('is-invalid'); valid = false; } else { p.classList.remove('is-invalid'); }
+      if (!u.value.trim()) { markInvalid(u, true); valid = false; } else { markInvalid(u, false); }
+      if (!p.value.trim()) { markInvalid(p, true); valid = false; } else { markInvalid(p, false); }
       if (!valid) { showError('⚠️ يرجى تعبئة الحقول المطلوبة'); return; }
 
       try {
         setSubmitting(true);
-        const res = await fetch(`${API_BASE}/auth/committees/login`, {
+        const res = await fetchWithTimeout(`${API_BASE}/auth/committees/login`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          credentials: 'include',              // مهم للجلسة عبر النطاقات
+          credentials: 'include',
+          timeout: 10000,
           body: JSON.stringify({ username: u.value.trim(), password: p.value })
         });
 
-        const data = await res.json().catch(() => ({}));
+        let data = {};
+        try { data = await res.json(); } catch { /* تجاهل */ }
+
         if (!res.ok) {
-          const msg = data?.message || '❌ فشل تسجيل الدخول';
-          showError(msg);
-          setSubmitting(false);
+          // تخصيص الرسائل حسب الحالة
+          if (res.status === 400) {
+            markInvalid(u, !u.value.trim());
+            markInvalid(p, !p.value.trim());
+            showError(data?.message || '❌ اسم المستخدم/البريد وكلمة المرور مطلوبة');
+          } else if (res.status === 401) {
+            // الخادم لا يُفصح إن كان الحساب معطَّل أو البيانات خاطئة،
+            // لكن إن أرسل رسالة واضحة نُظهرها كما هي.
+            const msg = (data?.message || '').toLowerCase();
+            if (msg.includes('معطل') || msg.includes('غير نشط') || msg.includes('inactive')) {
+              showError('🚫 حسابك معطّل. الرجاء التواصل مع المشرف لتفعيله.');
+            } else {
+              showError('❌ بيانات الدخول غير صحيحة أو أن الحساب معطّل.');
+            }
+            markInvalid(u, true);
+            markInvalid(p, true);
+          } else if (res.status === 403) {
+            showError(data?.message || '❌ غير مصرح بالدخول');
+          } else {
+            showError(data?.message || '❌ تعذّر تسجيل الدخول (خطأ غير متوقع)');
+          }
           return;
         }
 
+        // نجاح
         showSuccess(data?.message || '✅ تم تسجيل الدخول بنجاح');
-        setTimeout(() => {
-          window.location.href = getNextUrl(); // توجيه لنفس أصل الـAPI عند الحاجة
-        }, 700);
+        setTimeout(() => { window.location.href = getNextUrl(); }, 700);
+
       } catch (err) {
-        showError('❌ تعذر الاتصال بالخادم');
+        if (err?.name === 'AbortError') {
+          showError('⏱️ انتهت مهلة الاتصال. تحقق من الشبكة وحاول مجددًا.');
+        } else {
+          showError('❌ تعذّر الاتصال بالخادم');
+        }
       } finally {
         setSubmitting(false);
       }
     });
-
-    // Enter في الحقول يرسل النموذج تلقائيًا
-    document.getElementById('username').addEventListener('keydown', e => { if (e.key === 'Enter') document.getElementById('loginForm').dispatchEvent(new Event('submit')); });
-    document.getElementById('password').addEventListener('keydown', e => { if (e.key === 'Enter') document.getElementById('loginForm').dispatchEvent(new Event('submit')); });
   </script>
 </body>
 </html>
